# vulkan

./: .gitignore  CMakeLists.txt  example.json
assets/: colored_triangle.vert  colored_triangle_mesh.vert  debug_line.frag  gradient.comp  gradient_color.comp  voxel.frag  voxel.vert
game/: definitions.json  module.json
modules/game/: defs.hpp  game.cpp  module.json
src/: engine.hpp  game_state.cpp  game_state.hpp  input.cpp  input.hpp  main.cpp  registry.cpp  registry.hpp  ring_buffer.hpp
src/backends/generic/: camera.cpp  camera.hpp
src/backends/opengl/: opengl_engine.hpp
src/backends/vulkan/: allocated_buffer.cpp  allocated_buffer.hpp  allocated_image.cpp  allocated_image.hpp  builders.cpp  builders.hpp  defines.hpp  descriptors.cpp  descriptors.hpp  images.cpp  images.hpp  initializers.cpp  initializers.hpp  pipeline_builder.cpp  pipeline_builder.hpp  render_state.cpp  render_state.hpp  resource_loader.cpp  resource_loader.hpp  swapchain.cpp  swapchain.hpp  types.cpp  types.hpp  voxel_renderer.cpp  voxel_renderer.hpp  vulkan_engine.cpp  vulkan_engine.hpp  vulkan_function_pointers.hpp
src/components/: components.hpp
src/debug/: scope_profiler.cpp  scope_profiler.hpp
src/modules/: interface.cpp  interface.h  module.hpp  module_loader.cpp  module_loader.hpp
src/voxel/: chunk_manager.cpp  chunk_manager.hpp  generator.cpp  generator.hpp  mesh_generation.cpp  mesh_generation.hpp  render_types.hpp  types.cpp  types.hpp  world_generator.cpp  world_generator.hpp
